# rustrawi

./: Cargo.toml  README.md
src/: dictionary.rs  lib.rs  stemmer.rs  stop_word_remover.rs
src/stemmer/: confix_stripping.rs  context.rs
src/stemmer/confix_stripping/: precedence_adjustment.rs
src/stemmer/context/: visitor.rs
src/stemmer/context/visitor/: dont_stem_short_word.rs
tests/: dictionary.rs  example_word_list  stemmer.rs  stop_word_remover.rs
