[package]
name = "rustrawi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Sastrawi on Rust"
repository = "https://github.com/rahmatnazali/rustrawi"
readme = "readme.md"
keywords = ["number", "indonesian", "verbose", "said", "terbilang"]
exclude = [
    ".idea/*",
    ".github/*",
    "data/*",
    "*.iml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
