[package]
name = "rustrawi"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Sastrawi on Rust"
repository = "https://github.com/rahmatnazali/rustrawi"
readme = "README.md"
keywords = ["sastrawi", "stopword", "stem", "nlp", "tokenization"]
exclude = [
    ".idea/*",
    ".github/*",
    "data/*",
    "*.iml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
